Home Page Prototype

--- a/index.html
+++ b/index.html
@@ -4,17 +4,88 @@
  <link rel="stylesheet" href="{{ site.baseurl }}/sass/index.css">
 </head>
 
+<body>
 
-<div class="container">
+<div class="main-body container-fluid">
 
-	<div class="col-sm-3">
-	<h1> hello world </h1>
+	<div class="header">
+		<h1> Blag title </h1>
 	</div>
 
-	<div class="col-sm-9">
-	<h2> goodbye world </h2>
+</div>
+
+
+<div class="welcome row">
+	<div class="welcome-left col-sm-8">
+		<h1> Welcome to the blag! </h1>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+		</p>
+		<p>
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+		<a class="btn btn-primary" href="#" role="button">Button</a>
+	</div>	
+	<div class="welcome-right col-sm-4">
+		<img clas = "picture" src="{{ base.url }}/assets/images/pic-1.jpg">
+	</div>
+</div>
+
+
+<div class="main-body container-fluid">
+
+	<h2> Featured </h2>
+	<div class="carousel">
+		<h3> carousel goes here </h3>
+	</div>
+
+<h2> Blag Section </h2>
+<div class="blag">
+	<div class="section col-sm-6">
+	<div class="travel"></div>
+	</div>
+	<div class="section col-sm-6">
+	<div class="career"></div>
+	</div>
+	<div class="section col-sm-6">
+	<div class="life"></div>
+	</div>
+	<div class="section col-sm-6">
+	<div class="minimalism"></div>
+	</div>
 </div>
 
 </div>
 
+<div class="subscribe container-fluid"> 
+	<div class="subscribe-box">
+		<h1> Like what you see? ;) </h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut.
+		</p>
+		<h4> subscribe box and button </h4>
+	</div>
+</div>
 
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h4> footer goes here </h4>
+<br>
+<br>
+
+
+</body>
