Fixed Width & Set Layouts

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
+layout: page
 ---
 <head> 
  <link rel="stylesheet" href="{{ site.baseurl }}/sass/index.css">
@@ -6,7 +7,11 @@
 
 <body>
 
+
 <div class="main-body container-fluid">
+
+
+
 
 	<div class="header">
 		<h1> Blag title </h1>
@@ -75,17 +80,6 @@
 		<h4> subscribe box and button </h4>
 	</div>
 </div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h4> footer goes here </h4>
-<br>
-<br>
 
 
 </body>
