--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: page
---- 
-<head> 
+---
+<head>
  <link rel="stylesheet" href="{{ site.baseurl }}/sass/index.css">
+ <!-- <link rel="stylesheet" href="{{ site.baseurl }}/sass/default.css"> -->
+
 </head>
 
 <body>
@@ -28,7 +30,7 @@ layout: page
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		</p>
 		<p>
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -38,7 +40,7 @@ layout: page
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
 		<a class="btn btn-primary" href="#" role="button">Button</a>
-	</div>	
+	</div>
 	<div class="welcome-right col-sm-4">
 		<img clas = "picture" src="{{ base.url }}/assets/images/pic-1.jpg">
 	</div>
@@ -70,7 +72,7 @@ layout: page
 
 </div>
 
-<div class="subscribe container-fluid"> 
+<div class="subscribe container-fluid">
 	<div class="subscribe-box">
 		<h1> Like what you see? ;) </h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
