--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@ layout: page
 
 <div class="main-body container-fluid">
 
-
-
-
-	<div class="header">
-		<h1> Blag title </h1>
-	</div>
+	<div class="header"></div>
 
 </div>
 
@@ -28,7 +23,7 @@ layout: page
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+		proident. 
 		</p>
 		<p>
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -37,7 +32,11 @@ layout: page
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
-		<a class="btn btn-primary" href="#" role="button">Button</a>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua.
+		</p>
+		<button type="button" class="btn btn-primary btn-lg outline">Start Here</button>
+
 	</div>	
 	<div class="welcome-right col-sm-4">
 		<img clas = "picture" src="{{ base.url }}/assets/images/pic-1.jpg">
@@ -48,37 +47,55 @@ layout: page
 <div class="main-body container-fluid">
 
 	<h2> Featured </h2>
-	<div class="carousel">
-		<h3> carousel goes here </h3>
-	</div>
+	<div class="carousel"></div>
 
-<h2> Blag Section </h2>
-<div class="blag">
-	<div class="section col-sm-6">
-	<div class="travel"></div>
-	</div>
-	<div class="section col-sm-6">
-	<div class="career"></div>
-	</div>
-	<div class="section col-sm-6">
-	<div class="life"></div>
-	</div>
-	<div class="section col-sm-6">
-	<div class="minimalism"></div>
+
+<h2> Blog Section </h2>
+
+<div class="blog">
+	<div class="row">
+		<div class="col-sm-6">
+		<div class="travel"></div>
+		</div>
+		<div class="col-sm-6">
+		<div class="career"></div>
+		</div>
+		</div>
+
+		<div class="row">
+		<div class="col-sm-6">
+		<div class="life"></div>
+		</div>
+		<div class="col-sm-6">
+		<div class="minimalism"></div>
+		</div>
 	</div>
 </div>
 
 </div>
 
 <div class="subscribe container-fluid"> 
-	<div class="subscribe-box">
-		<h1> Like what you see? ;) </h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut.
-		</p>
-		<h4> subscribe box and button </h4>
-	</div>
+<div class="subscribe-box">
+  <div class="email-full">
+    <h2>Like what you see? ;) </h2>
+    <p> Lorem ipsum this is filler text to convince the readers to subscribe so that you can get money somehow and stuff and readers and things like that! :D </p>
+      <form class="ajax-form" method="POST" action="http://formspree.io/jenelledobyns@gmail.com">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-9">
+              <input type="text" class="email" name="email" placeholder="Your email address">
+            </div>
+            <div class="col-sm-3">
+              <button type="submit" class="btn btn-primary btn-lg outline">Subscribe</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    <div class="form-thank-you">
+      <h3>Thanks for Subscribing!</h3>
+    </div>
+  </div>
+</div>
 </div>
 
 
