Front Page 2.0 & Footer 2.0

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ layout: page
     <p> Lorem ipsum this is filler text to convince the readers to subscribe so that you can get money somehow and stuff and readers and things like that! :D </p>
       <form class="ajax-form" method="POST" action="http://formspree.io/jenelledobyns@gmail.com">
         <div class="container-fluid">
-          <div class="row">
+          <div class="row form">
             <div class="col-sm-9">
               <input type="text" class="email" name="email" placeholder="Your email address">
             </div>
