--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@ layout: page
 ---
 <head>
  <link rel="stylesheet" href="{{ site.baseurl }}/sass/index.css">
+ <link rel="stylesheet" href="{{ site.baseurl }}/sass/slick.css">
+ <!-- Page Specific JAVASCRIPT -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
+   <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"> </script>
+
 
 </head>
 
@@ -51,7 +57,70 @@ layout: page
 <div class="main-body container-fluid">
 
 	<h2> Featured </h2>
-	<div class="carousel"></div>
+	<div class="carousel">
+    <div class="slider-wrapper">
+      <div class="slider">
+      <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post6.jpg)">
+        <div class="caption">
+          <div class="maincaption">
+           <h1>Hello world</h1>
+          </div>
+        <div class="subcaption">
+         <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
+        </div>
+       </div>
+    </div>
+        <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post9.jpg)">
+          <div class="caption">
+            <div class="maincaption">
+             <h1>Hello world</h1>
+            </div>
+          <div class="subcaption">
+           <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
+          </div>
+         </div>
+       </div>
+        <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post10.jpg)">
+          <div class="caption">
+            <div class="maincaption">
+             <h1>Hello world</h1>
+            </div>
+          <div class="subcaption">
+           <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
+          </div>
+          </div>
+        </div>
+        <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post7.jpg)">
+          <div class="caption">
+            <div class="maincaption">
+             <h1>Hello world</h1>
+            </div>
+          <div class="subcaption">
+           <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
+          </div>
+         </div>
+       </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- CAROUSEL SCRIPTS post-jQuery link-->
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/javascript/slider.js">
+    </script>
+
+</div>
 
 
 <h2> Blog Section </h2>
