--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@ layout: page
 <body>
 
 
-<div class="main-body container-fluid">
 
-	<div class="header"></div>
+	<div class="header">
+    <div class="caption">
+   <h1>Live bold. Live noble.</h1>
+   <h2>Lifestyle design for the adventurous.</h2>
+ </div>
+  </div>
 
-</div>
+
 
 
 <div class="welcome row">
 	<div class="welcome-left col-sm-8">
-		<h1> Welcome to the blag! </h1>
+		<h1> Hello there! </h1>
 		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
