--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@ layout: page
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
    <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"> </script>
-
+   <script
+     src="https://code.jquery.com/jquery-3.2.1.js"
+     integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+     crossorigin="anonymous"></script>
+   <script>
+   $(function () {
+     $(document).scroll(function () {
+       var $nav = $(".navbar-fixed-top, .navbar-default, .navbar-nav");
+       $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+     });
+   });
+   </script>
 
 </head>
 
@@ -20,6 +31,7 @@ layout: page
     <div class="caption">
    <h1>Live bold. Live noble.</h1>
    <h2>Lifestyle design for the adventurous.</h2>
+   <button type="button" class="btn btn-primary btn-lg outline">Start Here</button>
  </div>
   </div>
 
@@ -28,26 +40,20 @@ layout: page
 
 <div class="welcome row">
 	<div class="welcome-left col-sm-8">
-		<h1> Hello there! </h1>
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-
+		<h1>Welcome to a new way of life.</h1>
+		<p> <b>I'm Jenelle, a 22 year old adventurer, photographer, web developer-in-training, and introvert.</b>
+    </p>
+   <p> Until this year, I lived my entire life in the suburbs of Colorado.
+     This year, I left everything I knew about that comfortable lifestyle and headed out to Southeast Asia to begin a new adventure.
 		</p>
+
 		<p>
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      This blog is to document those adventures and my new life, and more importantly to
+      share what I discover with others. On Noble Vita, you'll find my musings about careers, travel, relationships, lifestyle, and pretty much everything in between.
 		</p>
 
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua.
-		</p>
+    <p class="catch"><i>I believe in living life in a way that allows for independence, adventure, autonomy and freedom. Freedom to do what you want, go where you want, make what you want, and live how you want.</i></p>
+    <p>The only limits in life are the ones we impose on ourselves. Join me in the journey to smash those limitations and create your life - your way! :)</p>
 		<button type="button" class="btn btn-primary btn-lg outline">Start Here</button>
 
 	</div>
