--- a/index.html
+++ b/index.html
@@ -41,18 +41,11 @@ layout: page
 <div class="welcome row">
 	<div class="welcome-left col-sm-8">
 		<h1>Welcome to a new way of life.</h1>
-		<p> <b>I'm Jenelle, a 22 year old adventurer, photographer, web developer-in-training, and introvert.</b>
-    </p>
-   <p> Until this year, I lived my entire life in the suburbs of Colorado.
-     This year, I left everything I knew about that comfortable lifestyle and headed out to Southeast Asia to begin a new adventure.
+		<p>I'm Jenelle, a 22 year old adventurer, photographer, web developer and lover of life.
+
 		</p>
 
-		<p>
-      This blog is to document those adventures and my new life, and more importantly to
-      share what I discover with others. On Noble Vita, you'll find my musings about careers, travel, relationships, lifestyle, and pretty much everything in between.
-		</p>
-
-    <p class="catch"><i>I believe in living life in a way that allows for independence, adventure, autonomy and freedom. Freedom to do what you want, go where you want, make what you want, and live how you want.</i></p>
+    <p>I believe in living life in a way that allows for independence, adventure, autonomy and freedom. Freedom to do what you want, go where you want, make what you want, and live how you want.</i></p>
     <p>The only limits in life are the ones we impose on ourselves. Join me in the journey to smash those limitations and create your life - your way! :)</p>
 		<button type="button" class="btn btn-primary btn-lg outline">Start Here</button>
 
@@ -66,102 +59,89 @@ layout: page
 
 <div class="main-body container-fluid">
 
-	<h2> Featured </h2>
-	<div class="carousel">
-    <div class="slider-wrapper">
-      <div class="slider">
-      <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post6.jpg)">
+<div class="container">
+  <div class="top">
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="image">
+        <img src="{{ site.baseurl }}/assets/images/3.jpg">
+        <div class="overlay">
         <div class="caption">
           <div class="maincaption">
-           <h1>Hello world</h1>
+           <h1>Adventures</h1>
           </div>
-        <div class="subcaption">
-         <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
-        </div>
-       </div>
-    </div>
-        <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post9.jpg)">
-          <div class="caption">
-            <div class="maincaption">
-             <h1>Hello world</h1>
-            </div>
           <div class="subcaption">
-           <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
-          </div>
-         </div>
-       </div>
-        <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post10.jpg)">
-          <div class="caption">
-            <div class="maincaption">
-             <h1>Hello world</h1>
-            </div>
-          <div class="subcaption">
-           <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
-          </div>
+           <h2>This post is in progress. In the meantime, please explore other sections of the website!</h2>
           </div>
         </div>
-        <div class="slider--item" style="background-image: url({{ site.baseurl }}/assets/images/post7.jpg)">
-          <div class="caption">
-            <div class="maincaption">
-             <h1>Hello world</h1>
-            </div>
-          <div class="subcaption">
-           <h2>This is a subcaption about the article listed here. It will be an interesting caption to grab attention.</h2>
-          </div>
-         </div>
-       </div>
+      </div>
       </div>
     </div>
 
+    <div class="col-sm-4">
+      <div class="image">
+        <img src="{{ site.baseurl }}/assets/images/titleimg.jpg">
+        <div class="overlay">
+        <div class="caption">
+          <div class="maincaption">
+           <h1>Lifestyle</h1>
+          </div>
+          <div class="subcaption">
+           <h2>This post is in progress. In the meantime, please explore other sections of the website!</h2>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
 
+    <div class="col-sm-4">
+      <div class="image">
+        <img src="{{ site.baseurl }}/assets/images/2.jpg">
+        <div class="overlay">
+        <div class="caption">
+          <div class="maincaption">
+           <h1>About</h1>
+          </div>
+          <div class="subcaption">
+           <h2>This post is in progress. In the meantime, please explore other sections of the website!</h2>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-    <!-- CAROUSEL SCRIPTS post-jQuery link-->
-    <script type="text/javascript" src="{{ site.baseurl }}/assets/javascript/slider.js">
-    </script>
-
+  </div>
+  </div>
 </div>
 
 
-<h2> Blog Section </h2>
 
-<div class="blog">
-	<div class="row">
-		<div class="col-sm-6">
-		<div class="travel"></div>
-		</div>
-		<div class="col-sm-6">
-		<div class="career"></div>
-		</div>
-		</div>
 
-		<div class="row">
-		<div class="col-sm-6">
-		<div class="life"></div>
-		</div>
-		<div class="col-sm-6">
-		<div class="minimalism"></div>
-		</div>
-	</div>
+<div class="container blog">
+  <h1>Connect with me!</h1>
+  <div class="row">
+    <div class="col-sm-6">
+      <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/8cff1492758d52128d24a48ef0b5bdbe.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+<h2><a href="http://instagram.com/noblevita">@noblevita</a></h2>
+    </div>
+    <div class="col-sm-6 containervid">
+
+
+<aside id="video">
+      <iframe src="https://www.youtube.com/embed/EreZNkWzBAw" frameborder="0" allowfullscreen></iframe>
+    </aside>
+    <h2><a href="http://youtube.com/noblevita">@noblevita</a></h2>
 </div>
+  </div>
+</div>
+
 
 </div>
 
 <div class="subscribe container-fluid">
-<div class="subscribe-box">
   <div class="email-full">
-    <h2>Like what you see? ;) </h2>
-    <p> Lorem ipsum this is filler text to convince the readers to subscribe so that you can get money somehow and stuff and readers and things like that! :D </p>
+    <h1>Want more?</h1>
+    <p> Subscribe for the latest updates so you'll never miss a post!</p>
       <form class="ajax-form" method="POST" action="http://formspree.io/jenelledobyns@gmail.com">
         <div class="container-fluid">
           <div class="row form">
@@ -171,7 +151,6 @@ layout: page
             <div class="col-sm-3">
               <button type="submit" class="btn btn-primary btn-lg outline">Subscribe</button>
             </div>
-          </div>
         </div>
       </form>
     <div class="form-thank-you">
