--- a/index.html
+++ b/index.html
@@ -38,22 +38,24 @@ layout: page
 
 
 
-<div class="welcome row">
-	<div class="welcome-left col-sm-8">
-		<h1>Welcome to a new way of life.</h1>
+<div class="welcome-container">
+  <div class="welcome row">
+		<h1>Filler title goes here.</h1>
 		<p>I'm Jenelle, a 22 year old adventurer, photographer, web developer and lover of life.
 
 		</p>
 
     <p>I believe in living life in a way that allows for independence, adventure, autonomy and freedom. Freedom to do what you want, go where you want, make what you want, and live how you want.</i></p>
     <p>The only limits in life are the ones we impose on ourselves. Join me in the journey to smash those limitations and create your life - your way! :)</p>
-		<button type="button" class="btn btn-primary btn-lg outline">Start Here</button>
+		
+    
+    <!--<button type="button" class="btn btn-primary btn-lg outline">Start Here</button>-->
 
-	</div>
 
-	<div class="welcome-right col-sm-4">
-		<img clas = "picture" src="{{ base.url }}/assets/images/pic-1.jpg">
-	</div>
+	<!--<div class="welcome-right col-sm-4">
+		<img class = "picture" src="{{ base.url }}/assets/images/MHS-170.jpg">
+	</div>-->
+</div>
 </div>
 
 
@@ -64,11 +66,11 @@ layout: page
   <div class="row">
     <div class="col-sm-4">
       <div class="image">
-        <img src="{{ site.baseurl }}/assets/images/3.jpg">
+        <img src="{{ site.baseurl }}/assets/images/post5.jpg">
         <div class="overlay">
         <div class="caption">
           <div class="maincaption">
-           <h1>Adventures</h1>
+           <h1>Blog</h1>
           </div>
           <div class="subcaption">
            <h2>This post is in progress. In the meantime, please explore other sections of the website!</h2>
@@ -80,7 +82,7 @@ layout: page
 
     <div class="col-sm-4">
       <div class="image">
-        <img src="{{ site.baseurl }}/assets/images/titleimg.jpg">
+        <img src="{{ site.baseurl }}/assets/images/post1.jpg">
         <div class="overlay">
         <div class="caption">
           <div class="maincaption">
@@ -96,7 +98,7 @@ layout: page
 
     <div class="col-sm-4">
       <div class="image">
-        <img src="{{ site.baseurl }}/assets/images/2.jpg">
+        <img src="{{ site.baseurl }}/assets/images/MHS-170.jpg">
         <div class="overlay">
         <div class="caption">
           <div class="maincaption">
