--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -3,7 +3,7 @@ layout: blog
 pagination:
   enabled: true
 paginate:
-  category: blog
+  category: lifestyle
 ---
 <div class="container">
   <div class="row sort">
